<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_naem" tools:ignore="DuplicateDefinition">JalanIn-Aja</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_food_list">FoodListActivity</string>
    <string name="name">MacroProject</string>
    <string name="aceh">TODO</string>
    <string name="sumatera_utara">TODO</string>
    <string name="kalimantan_timur">TODO</string>
    <string name="kalimantan_selatan">TODO</string>
    <string name="jawa_timur">TODO</string>
    <string name="jawa_barat">TODO</string>
    <string name="petualangan_wisata_anda">Petualangan Wisata Anda</string>
    <string name="temukan_rasakan"><![CDATA[Temukan & Rasakan]]></string>
    <string name="ellipse">TODO</string>
    <string name="foto">TODO</string>
    <string name="komponen_pencarian">TODO</string>
    <string name="kotak_pencarian">TODO</string>
    <string name="jawa_tengah">TODO</string>
    <string name="petualangan">Cari Nama Provinsi</string>
    <string name="temukan_dan_rasakan_petualangan_wisata_anda">Temukan dan Rasakan Petualangan Wisata Anda</string>
    <string name="nanggroe_aceh_darussalam">Nanggroe Aceh Darussalam</string>
    <string name="jabar">Jawa Barat</string>
    <string name="jateng">Jawa Tengah</string>
    <string name="kalsel">Kalimantan Selatan</string>
    <string name="kaltim">Kalimantan Timur</string>
    <string name="sumut">Sumatera Utara</string>
    <string name="app_name">JalanInAja</string>
    <string name="text_login">LOGIN</string>
    <string name="text_daftar">DAFTAR</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="lupapw">Lupa password?</string>
    <string name="belumpunyaakun">Belum Mempunyai Akun? Daftar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="regwisatawan">Wisatawan</string>
    <string name="regpengelola">Pengelola</string>
    <string name="atau">atau</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aceh">"Nanggroe Aceh Darussalam"</string>
    <string name="hint">"Cari provinsi"</string>
</resources>